RESOLVED FIXED270355
[WPE] Fix build in older platforms
https://bugs.webkit.org/show_bug.cgi?id=270355
Summary [WPE] Fix build in older platforms
Claudio Saavedra
Reported 2024-03-01 09:23:06 PST
SSIA
Attachments
Claudio Saavedra
Comment 1 2024-03-01 09:25:28 PST
EWS
Comment 2 2024-03-01 09:44:02 PST
Committed 275559@main (291cc0752318): <https://commits.webkit.org/275559@main> Reviewed commits have been landed. Closing PR #25350 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.