[WPE] Fix build in older platforms https://bugs.webkit.org/show_bug.cgi?id=270355

Unreviewed build fix.

The include was wrong, even if WPE_PLATFORM is not enabled,
the DMABufRendererBufferFormat definition is needed for
the empty vector.

* Source/WebKit/UIProcess/wpe/WebPageProxyWPE.cpp:

Canonical link: https://commits.webkit.org/275559@main